# Dependencies

./: CMakeLists.txt  DependencyData.cmake  Toolchain-mingw32.cmake  Toolchain-mingw64.cmake
downloader/: downloader.py
